# yarner

./: .gitignore  .travis.yml  404.html  Cargo.toml  LICENSE  README.md  blocks-and-macros.html  command-line-arguments.html  config-languages.html  config-parser.html  config-paths.html  configuration.html  copying-files.html  dead-and-hidden-code.html  getting-started.html  index.html  installation.html  introduction.html  links-and-transclusions.html  multiple-code-files.html  print.html  reverse-mode.html  searchindex.js  searchindex.json  watch-command.html
.github/workflows/: crates-io.yml  guide.yml  publish.yml  release.yml  test.yml  tests.yml
advanced/: advanced-topics.html  continuous-integration.html  effective-markdown.html  mdbook.html  project-structure.html
docs/: Features.md
examples/: .gitignore
examples/bird/: Outline.toml  Yarner.toml  config.toml  wc.c.bird  wc.c.lit
examples/bird/code/: wc.c
examples/bird/doc/: wc.c.bird  wc.c.lit
examples/default_setup/: README.md  README.md.md  Yarner.toml
examples/default_setup/code/: Cargo.toml  README.md
examples/default_setup/docs/: README.md  README.md.md
examples/features_demo/: Cargo.toml.md  README.md  README.md.md  Yarner.toml
examples/features_demo/code/: Cargo.toml  README.md
examples/features_demo/docs/: .gitignore.md  README.md  README.md.md
examples/hello-world/: Cargo.toml  build.rs
examples/hello-world/src/: main.rs.md
examples/html/: Outline.toml  config.toml  wc.c.html
examples/html/__docs/: wc.c.html
examples/html/doc/: wc.c.html
examples/java_gradle/: README.md  Yarner.toml
examples/md/: Outline.toml  config.toml  wc.c.md
examples/md/doc/: wc.c.md
examples/modular_odd/: ModularODD.nlogo.md  Outline.toml
examples/modular_odd/__code/: ModularODD.nlogo
examples/modular_odd/__docs/: ModularODD.nlogo.md
examples/modular_odd/appendix/: appendix.md
examples/modular_odd/initialization/: center-init.md  (+1 more)
examples/netlogo/: README.md  Yarner.toml  appendix.md
examples/netlogo_md/: Model.nlogo.md  Outline.toml  compile.bat  outline.bat
examples/netlogo_odd/: Model.nlogo.md  Outline.toml  Rabies.nlogo.md  compile.bat  outline.bat
examples/netlogo_odd_template/: ODD_Template.nlogo.md  Outline.toml  compile.bat  outline.bat
examples/python/: README.md  Yarner.toml
examples/rust/: .gitignore.md  Cargo.toml.md  README.md  Yarner.toml
examples/rust_md/: .gitignore.md  Outline.toml  README.md.md  compile.bat  outline.bat
examples/rust_one_file/: Outline.toml  README.md.md  outline.bat
examples/tex/: Outline.toml  compile.bat  config.toml  wc.c.tex
examples/transclusions/: LICENSE.md  Outline.toml  README.md.md  main.rs.md  outline.bat  transclude1.md.md  transclude2.md.md
guide/: book.toml
guide/src/: SUMMARY.md  blocks-and-macros.md  blocks-macros.md  command-line-arguments.md  comment-extraction.md  config-languages.md  config-parser.md  config-paths.md  configuration.md  continuous-integration.md  copying-files.md  dead-and-hidden-code.md  getting-started.md  how-it-works.md  installation.md  introduction.md  links-and-transclusions.md  meta-variables.md  multiple-code-files.md  other-features.md  reverse-mode.md  special-features.md  watch-command.md
plugins/: known.html  plugins.html  using.html  writing.html
schemas/: README.md  data.json  documents.json  yarner-data.json
src/: cmd.rs  code.rs  compile.rs  compile_reverse.rs  config.rs  copy.rs  document.rs  files.rs  lib.rs  lock.rs  main.rs  parse.rs  plugin.rs  preprocess.rs  preprocessor.rs  print.rs  util.rs  watch.rs
src/compile/: forward.rs  mod.rs  reverse.rs
src/config/: mod.rs
src/create/: Yarner.toml  mod.rs
src/document/: ast.rs  code.rs  mod.rs  text.rs  tranclusion.rs  transclusion.rs
src/parser/: bird.rs  code.rs  html.rs  md.rs  mod.rs  tex.rs
src/templates/: Yarner-html.toml  Yarner-md.toml  Yarner-tex.toml  Yarner.toml  mod.rs  template.bird  template.html  template.md  template.tex
src/util/: mod.rs  path.rs  try_collect.rs
yarner-lib/: Cargo.toml  README.md
yarner-lib/src/: config.rs  document.rs  lib.rs
(+68 files in other folders)
