[package]
name = "yarner"
version = "0.4.1"
authors = ["Martin Lange <martin_lange_@gmx.net>", "Cameron Eldridge <cameldridge@gmail.com>"]
description = "Literate programming tool for Markdown"
homepage = "https://mlange-42.github.io/yarner/"
repository = "https://github.com/mlange-42/yarner"
license = "MIT"
edition = "2018"

[workspace]
members = ["yarner-lib", "."]
default-members = ["yarner-lib", "."]

[[bin]]
name = "yarner"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
yarner-lib = { path = "yarner-lib" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", features = ["preserve_order"] }
regex = "1.4"
path-clean = "0.1"
pathdiff = "0.2"
glob = "0.3"
clap = "2.33"
blake3 = "0.3"
once_cell = "1.5"
