[package]
name = "yarner"
version = "0.5.2"
authors = ["Martin Lange <martin_lange_@gmx.net>", "Cameron Eldridge <cameldridge@gmail.com>"]
readme = "README.md"
description = "Literate programming tool for Markdown"
keywords = ["markdown", "literate-programming", "documentation"]
homepage = "https://mlange-42.github.io/yarner/"
repository = "https://github.com/mlange-42/yarner"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"
exclude = ["guide", ".github"]

[workspace]
members = ["yarner-lib", "."]
default-members = ["yarner-lib", "."]

[[bin]]
name = "yarner"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
yarner-lib = { path = "yarner-lib", version = "0.5.2" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", features = ["preserve_order"] }
serde_json = "1.0"
regex = "1.4"
path-clean = "0.1"
pathdiff = "0.2"
glob = "0.3"
clap = "2.33"
blake3 = "0.3"
once_cell = "1.5"
